added redis service
